# WerSu

./: .env.default  .gitignore  Dockerfile  README.md  docker-compose.yaml  logging.yaml  main.py  pgvector_init.sql  pyproject.toml  pytest.ini  run_server.sh
docs/: converters.md  dependency-graph.md  docstrings.md  images.md  jwt-tokens.md  project-structure.md  sharing.md  spicedb-schema.md  styleguide.md  thirdparty-migrations.md
infrastructure/: .garage.env  README.md  garage.toml
pocs/: garage_poc.py  test_garage_poc.py
src/: __init__.py  init.sql  main.py  main_test.py  poc.py  requirements-dev.txt  requirements.txt  run_server.sh  test-client.py
tests/: conftest.py  fixtures.py  integration_helpers.py  permissions_integration_test.py  poc_permissions.py  schema.zed  test_activity_builder.py  test_activity_logger_service.py  test_activity_repo.py  test_activity_statistics_service.py  test_async_ttl.py  test_attachment_integration.py  test_attachment_service.py  test_convert_entity_for_db.py  test_dict_helper.py  test_directory_activity.py  test_directory_activity_integration.py  test_directory_facade.py  test_directory_service.py  test_directory_service_cascade.py  test_extract_attachments.py  test_extract_bookstack_attachment_ids.py  test_garage_poc.py  test_grpc_activity_statistics_service.py  test_grpc_directory_service.py  test_grpc_note_service.py  test_grpc_note_version_service.py  test_grpc_thirdparty_migrations.py  test_grpc_visitor.py  test_logging_config.py  test_namespaces.py  test_note_content_repo.py  test_note_facade.py  test_note_service.py  (+27 more)
(+261 files in other folders)
