[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'"
]
[project]
name = "WerSu"
version = "0.1.0"
description = "Backed for WerSu - a documentation site"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "authzed>=1.24.4",
    "colorama>=0.4.6",
    "pyyaml>=6.0.2",
    "grpclib>=0.4.9",
    "mypy-protobuf>=3.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.0",
    "testcontainers>=4.14.2",
    "testcontainers-spicedb>=0.1.3",
    "torch>=2.12.0",
    "typing-extensions>=4.15.0",
    "boto3>=1.43.21",
    "grpcio-tools>=1.81.0",
    "pyjwt>=2.10.1",
]
